# blink1-control

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  example.json  index.md  todo.md
.github/workflows/: ccpp.yml
cmake/: cpm_utilities.cmake
coverage/: index.html  index.include_blink-lib_Blink1Device.hpp.html  index.include_blink-lib_PatternLineN.hpp.html  index.include_blink-lib_PlayState.hpp.html  index.include_blink-lib_RGB.hpp.html  index.include_blink-lib_RGBN.hpp.html  index.include_config_ConditionConfig.hpp.html  index.include_config_Config.hpp.html  index.include_config_PatternCommand.hpp.html  index.include_config_PatternConfig.hpp.html  index.include_config_ProcessMonitorConfig.hpp.html  index.include_config_RollupConfig.hpp.html  index.lib_googletest_googletest_include_gtest_gtest-assertion-result.h.html  index.lib_googletest_googletest_include_gtest_gtest-message.h.html  index.lib_googletest_googletest_include_gtest_gtest-printers.h.html  index.lib_googletest_googletest_include_gtest_gtest.h.html  index.lib_googletest_googletest_include_gtest_internal_gtest-internal.h.html  index.lib_googletest_googletest_include_gtest_internal_gtest-port.h.html  index.lib_googletest_googletest_include_gtest_internal_gtest-type-util.h.html  index.src_blink-lib_Blink1Device.cpp.html  index.src_blink-lib_FakeBlink1Lib.cpp.html  index.src_blink-lib_PatternLine.cpp.html  index.src_blink-lib_PatternLineN.cpp.html  index.src_blink-lib_PlayState.cpp.html  index.src_blink-lib_RGB.cpp.html  index.src_blink-lib_RGBN.cpp.html  index.src_config_ConfigParser.cpp.html  index.src_config_PatternCommand.cpp.html  index.src_network_NetworkManager.cpp.html  index.test_blink-lib_Blink1Device_BadInit_test.cpp.html  index.test_blink-lib_Blink1Device_Blocking_test.cpp.html  index.test_blink-lib_Blink1Device_GoodInitBadFunction_test.cpp.html  index.test_blink-lib_Blink1Device_GoodInit_test.cpp.html  index.test_blink-lib_FakeBlink1Lib.cpp.html  index.test_blink-lib_PatternLineN_test.cpp.html  index.test_blink-lib_PatternLine_test.cpp.html  index.test_blink-lib_PlayState_test.cpp.html  index.test_blink-lib_RGBN_test.cpp.html  index.test_blink-lib_RGB_test.cpp.html  index.test_config_ConfigParser_test.cpp.html  (+1 more)
docs/: Blink1Device_8hpp.html  Blink1Device_8hpp_source.html  ConditionConfig_8hpp.html  ConditionConfig_8hpp_source.html  ConfigParser_8hpp.html  ConfigParser_8hpp_source.html  Config_8hpp.html  Config_8hpp_source.html  Documentation_8hpp.html  Documentation_8hpp_source.html  FakeBlink1Lib_8hpp_source.html  NetworkManager_8hpp.html  NetworkManager_8hpp_source.html  PatternCommand_8hpp.html  PatternCommand_8hpp_source.html  PatternConfig_8hpp.html  PatternConfig_8hpp_source.html  PatternLineN_8hpp.html  PatternLineN_8hpp_source.html  PatternLine_8hpp.html  PatternLine_8hpp_source.html  PlayState_8hpp.html  PlayState_8hpp_source.html  ProcessMonitorConfig_8hpp.html  ProcessMonitorConfig_8hpp_source.html  RGBN_8hpp.html  RGBN_8hpp_source.html  RGB_8hpp.html  RGB_8hpp_source.html  RollupConfig_8hpp.html  RollupConfig_8hpp_source.html  annotated.html  annotated_dup.js  blink-lib_8hpp.html  blink-lib_8hpp_source.html  classblink1__control_1_1blink1__lib_1_1Blink1Device-members.html  classblink1__control_1_1blink1__lib_1_1Blink1Device.html  classblink1__control_1_1blink1__lib_1_1Blink1Device.js  classblink1__control_1_1config_1_1ConfigParser-members.html  classblink1__control_1_1config_1_1ConfigParser.html  (+80 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+23 more)
include/: Blink1Device.hpp  Documentation.hpp  PatternLine.hpp  PatternLineN.hpp  PlayState.hpp  RGB.hpp  RGBN.hpp  Socket.hpp  blink-lib.hpp  config.hpp  network.hpp
include/blink-lib/: Blink1Device.hpp  FakeBlink1Lib.hpp  PatternLine.hpp  PatternLineN.hpp  PlayState.hpp  RGB.hpp  RGBN.hpp
include/config/: ConditionConfig.hpp  Config.hpp  ConfigParser.hpp  LedConfig.hpp  PatternCommand.hpp  PatternConfig.hpp  ProcessMonitorConfig.hpp  RollupConfig.hpp
include/network/: NetworkManager.hpp
scripts/: llvm-cov.sh
src/: Blink1Device.cpp  Blink1Device.hpp  PatternLine.cpp  PatternLine.hpp  PatternLineN.cpp  PlayState.cpp  PlayState.hpp  RGB.cpp  RGB.hpp  RGBN.cpp  Socket.cpp  main.cpp
src/blink-lib/: Blink1Device.cpp  FakeBlink1Lib.cpp  PatternLine.cpp  PatternLineN.cpp  PlayState.cpp  RGB.cpp  RGBN.cpp
src/config/: ConfigParser.cpp  PatternCommand.cpp
src/network/: NetworkManager.cpp
test/: Blink1Device_BadInit_test.cpp  Blink1Device_GoodInitBadFunction_test.cpp  Blink1Device_GoodInit_test.cpp  FakeBlink1Lib.cpp  FakeBlink1Lib.hpp  PatternLineN_test.cpp  PatternLine_test.cpp  PlayState_test.cpp  RGBN_test.cpp  RGB_test.cpp  test_test.cpp
test/blink-lib/: Blink1Device_BadInit_test.cpp  Blink1Device_Blocking_test.cpp  Blink1Device_GoodInitBadFunction_test.cpp  Blink1Device_GoodInit_test.cpp  FakeBlink1Lib.cpp  FakeBlink1Lib.hpp  PatternLineN_test.cpp  PatternLine_test.cpp  PlayState_test.cpp  RGBN_test.cpp  RGB_test.cpp
test/config/: ConfigParser_test.cpp  PatternCommand_test.cpp
